<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item"
        android:icon="@drawable/baseline_languge"
        android:title="@string/change"
        app:showAsAction="always"
        android:orderInCategory="2"
        >
        <menu>
            <item
                android:id="@+id/english"
                android:title="@string/english" />
            <item
                android:id="@+id/russian"
                android:title="@string/russian" />
            <item
                android:id="@+id/chinese"
                android:title="@string/chinese" />
        </menu>
    </item>
    <item
        android:id="@+id/card"
        android:title="@string/card"
        android:icon="@drawable/baseline_cards"
        app:showAsAction="always"
        android:orderInCategory="1"
        />
</menu>